# mx-xday-hackathon-demos

./: README.md
control/: Cargo.toml  emit-sft.sh  send-nft.sh
control/controller/: Cargo.toml
control/controller/src/: main.rs
control/notifier-bridge/: Cargo.toml
control/notifier-bridge/src/: main.rs
control/robot-sc/: Cargo.toml
control/robot-sc/meta/: Cargo.toml
control/robot-sc/meta/src/: main.rs
control/robot-sc/scenarios/: empty.scen.json
control/robot-sc/src/: empty.rs
control/robot-sc/tests/: empty_scenario_rs_test.rs
control/robot-sc/wasm/: Cargo.toml
control/robot-sc/wasm/src/: lib.rs
control/unit-app/: Cargo.toml
control/unit-app/src/: main.rs
firmware/controller/src/: main.cpp  net.cpp
firmware/debug/: platformio.ini
firmware/debug/src/: main.cpp
firmware/robot/: platformio.ini  robot.ino
firmware/robot/include/: net.h  protocol.h  util.h
firmware/robot/src/: main.cpp
firmware/station/: station.ino
